Fix z-index issue with bits

--- a/RightpointLabs.Pourcast.Web/Content/pourcast.less
+++ b/RightpointLabs.Pourcast.Web/Content/pourcast.less
@@ -106,6 +106,7 @@ html, body,
     width: 100%;
     height: 100%;
     position: relative;
+    z-index: 0;
 }
 
 .tap {
